tdf#150589 Set cursor to better position after deleting a drawing

object

Cutting a drawing object involves SwWrtShell::DelRight which uses the
drawing object's frame top-left point to set the cursor after
deleting. Delete and Backspace do not use SwWrtShell::DelRight to
delete a drawing object. This patch makes Delete and Backspace
position the cursor like Cut after drawing object delete.

Change-Id: I6dc07eccc8397393a230368a20b0589e6d57a89a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140036
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>